Use "Your Tracked Series" as headline for the series overview

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -12,7 +12,7 @@
     <string name="increase_season">Staffel hochzählen</string>
     <string name="okay">Okay</string>
     <string name="season_count">Staffel %1$s</string>
-    <string name="your_tracked_series">Deine Serien:</string>
+    <string name="your_tracked_series">Deine Serien</string>
     <string name="cancel">Abbrechen</string>
     <string name="watch">watch</string>
     <string name="wait">wait</string>
