--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="increase_season">Increase season</string>
     <string name="okay">Okay</string>
     <string name="season_count">Season %1$s</string>
-    <string name="your_tracked_series">Your Series:</string>
+    <string name="your_tracked_series">Your Series</string>
     <string name="cancel">Cancel</string>
     <string name="watch">watch</string>
     <string name="wait">wait</string>
